--- a/css/base.css
+++ b/css/base.css
@@ -8,5 +8,11 @@ body
 
 canvas {
 	position: fixed;
-	image-rendering: -moz-crisp-edges;
+
+	image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -o-crisp-edges;
+    image-rendering: optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
 }
